# vibestudio

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  MOBILE.md  README.md  RELEASING.md  clippy.toml  design.md  eslint.config.mjs  index.html  package-lock.json  package.json  temp.diff  temp.txt  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  download-aliases.yml  provision-smoke.yml  release-tidy.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/api/download/: route.ts
app/api/file/: route.ts
app/api/raw/: route.ts
app/api/skill/: route.ts
client/desktop/: Cargo.toml  clippy.toml  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
client/desktop/capabilities/: default.json
client/desktop/icons/: icon.icns
client/desktop/src/: editor.rs  lib.rs  securestore.rs
client/web/: globals.css  main.tsx
client/web/app/: AppShell.tsx  RenamedRoute.tsx  RootFallback.tsx  router.tsx
client/web/components/: FileIcon.tsx  FolderPicker.tsx  LiveEditor.tsx  MineDialog.tsx  Modal.tsx  NavBar.tsx  NewSessionDialog.tsx  NewTerminalDialog.tsx  PhoneModal.tsx  RemoteMenu.tsx  ResizeHandle.tsx  SessionsWorkspace.tsx  SplitStack.tsx  TerminalPane.tsx  TerminalsWorkspace.tsx  UpdateBanner.tsx  ValidationPill.tsx  connections.tsx  ui.tsx
client/web/lib/: agentmd.ts  agents.ts  api.ts  diffGeometry.ts  editorState.ts  fileTypes.ts  log.ts  mining.ts  push.ts  recents.ts  remote.ts  routes.ts  sessions.ts  skill.ts  skills.ts  softKeyboard.ts  sshProfiles.ts  studioLayout.ts  terminalPrefs.ts  terminals.ts  theme.ts  types.ts
client/web/pages/: MobileConnect.tsx
client/web/pages/agentmd/: AgentMdRoute.tsx
client/web/pages/credentials/: ConnectionsCard.tsx  CredentialsRoute.tsx  LocalStoreCard.tsx
client/web/pages/home/: DashboardRoute.tsx  HomeRoute.tsx  ImportSkillDialog.tsx  MineDialog.tsx  NewSkillDialog.tsx  SkillGallery.tsx
client/web/pages/markdown/: MarkdownRoute.tsx
client/web/pages/mining/: MiningRoute.tsx
client/web/pages/secrets/: ConnectionsCard.tsx  LocalStoreCard.tsx  ProviderGallery.tsx  SecretsRoute.tsx  providers.ts
client/web/pages/sessions/: SessionsHost.tsx
client/web/pages/studio/: AgentPanel.tsx  DiffOverlays.tsx  ExportDialog.tsx  ExportedDialog.tsx  FilePane.tsx  FileTree.tsx  GitHubSync.tsx  LiveEditor.tsx  ManagePanel.tsx  MinedBanner.tsx  PreviewBanner.tsx  SaveVersionDialog.tsx  Sidebar.tsx  SkillDocument.tsx  SourceControl.tsx  StudioCommitRoute.tsx  StudioContext.ts  StudioFileRoute.tsx  StudioIndexRoute.tsx  StudioLayout.tsx  StudioRoute.tsx  TopBar.tsx  reviewContext.ts  saveHooks.ts  useAutosave.ts  useEagerCommitDraft.ts  useReviewAvailable.ts
client/web/pages/terminals/: NewTerminalDialog.tsx  TerminalsHost.tsx  TerminalsWorkspace.tsx
components/: CodeEditor.tsx  CodeView.tsx  FileEditor.tsx  FileIcon.tsx  FilePane.tsx  FileTree.tsx  FileView.tsx  Home.tsx  LiveEditor.tsx  Markdown.tsx  Sidebar.tsx  SkillApp.tsx  SkillDocument.tsx  SkillEditor.tsx  SkillView.tsx  TopBar.tsx  ValidationPanel.tsx  editorState.ts  ui.tsx  useManualSave.ts
crates/skill-core/: Cargo.toml
crates/skill-core/src/: commitmsg.rs  discover.rs  engine.rs  gitops.rs  gpu.rs  lib.rs  secrets.rs  skill.rs  sync.rs
crates/skill-remote/: Cargo.toml
crates/skill-remote/src/: lib.rs
crates/skill-server/: Cargo.toml
crates/skill-server/src/: main.rs
crates/skill-term/: Cargo.toml
crates/skill-term/src/: lib.rs
docs/: index.html  privacy.html  support.html
lib/: server.ts  skill.ts
plans/: mobile-ux.md
public/: manifest.webmanifest  sw.js
scripts/: fetch-cuda-backend.sh  fetch-engine.sh  fetch-tmux.sh  ios-sim.sh
server/skill-core/: Cargo.toml
server/skill-core/src/: agentmd.rs  agents.rs  commit_agent.rs  commitmsg.rs  connections.rs  discover.rs  editor.rs  engine.rs  filetypes.rs  github.rs  gitops.rs  gpu.rs  keystore.rs  lib.rs  mining.rs  paths.rs  pathsafe.rs  process.rs  remotesync.rs  reveal.rs  secrets.rs  session_title.rs  skill.rs  switchboard.rs  update.rs
server/skill-server/: Cargo.toml  build.rs
server/skill-server/src/: events.rs  gateway.rs  lib.rs  main.rs  phone.rs  proxy.rs  push.rs  remote_api.rs  tailscale.rs
server/skill-server/src/sshmgr/: conn.rs  keygen.rs  mod.rs  provision.rs  russh_tx.rs  session.rs  ssh.rs
server/skill-server/tests/: notify_smoke.rs  proxy_smoke.rs  russh_e2e.rs
server/skill-term/: Cargo.toml
server/skill-term/examples/: bell_check.rs
server/skill-term/src/: lib.rs
skills/load-secrets/: SKILL.md  activate.sh
skills/skill-miner/: SKILL.md
skills/skill-miner/references/: quality-bar.md
skills/skill-miner/scripts/: common.py  discover.py  extract.py  llm.py  skills_inventory.py
src/: globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: AppShell.tsx  RootFallback.tsx  routeGuard.ts  router.tsx
src/components/: ExportDialog.tsx  Home.tsx  LiveEditor.tsx  ManagePanel.tsx  NewTerminalDialog.tsx  RemotesDialog.tsx  SecretsManager.tsx  SkillApp.tsx  SkillDocument.tsx  TerminalPane.tsx  TerminalsWorkspace.tsx  TopBar.tsx
src/lib/: agents.ts  api.ts  diffGeometry.ts  editorState.ts  routes.ts  skill.ts  wordDiff.ts
src/pages/home/: HomeRoute.tsx  ImportSkillDialog.tsx
src/pages/studio/: DiffOverlays.tsx  DiffView.tsx  FilePane.tsx  LiveEditor.tsx  ManagePanel.tsx  SaveVersionDialog.tsx  Sidebar.tsx  SkillDocument.tsx  SourceControl.tsx  StudioCommitRoute.tsx  StudioContext.ts  StudioFileRoute.tsx  StudioLayout.tsx  StudioRoute.tsx  TopBar.tsx  saveHooks.ts  useAutosave.ts  useCheckpoint.ts  useEagerCommitDraft.ts  useManualSave.ts
src/pages/terminals/: NewTerminalDialog.tsx  TerminalPane.tsx  TerminalsHost.tsx  TerminalsWorkspace.tsx
