# Cargo workspace: the Tauri desktop app, the shared (GUI-free) core, and the
# headless HTTP server (for the WSL2 / remote-backend mode).
[workspace]
members = ["src-tauri", "crates/skill-core", "crates/skill-server", "crates/skill-term", "crates/skill-remote"]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
