# Cargo workspace. client/desktop is the Tauri shell; server/{skill-core,
# skill-term,skill-server} is the backend it runs in-process (and that also runs
# standalone on a remote host). See design.md.
[workspace]
members = ["client/desktop", "server/skill-core", "server/skill-server", "server/skill-term"]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
