[package]
name = "agent-skill-studio"
version = "0.1.0"
description = "View and edit Agent Skills"
authors = ["General Agency"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skill-core = { path = "../crates/skill-core" }
skill-term = { path = "../crates/skill-term" }
skill-remote = { path = "../crates/skill-remote" }
