[package]
name = "vibestudio"
version = "0.0.0"
description = "View and edit Agent Skills"
authors = ["Altrina"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: window-close hides to the tray (the tray governs the lifecycle);
# image-png decodes the bundled icon for the tray.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
skill-core = { path = "../../server/skill-core" }
skill-term = { path = "../../server/skill-term" }
# Backend (incl. the SSH connection manager) — the desktop wires it into its
# in-process server; the ssh/provisioning code lives here, not in the shell.
skill-server = { path = "../../server/skill-server" }
# Logging facade for the shell's own diagnostics; the subscriber comes from
# `skill_server::init_logging()`, so no `env_logger` dependency is needed here.
log = "0.4"
# Self-update download/install (dmg-app, NSIS, deb/AppImage). Pure-Rust use,
# driven by `ShellUpdater` — no JS API, so no capability entries are needed.
tauri-plugin-updater = "2"
# OS toasts for agent turn-finish events. Pure-Rust use, driven by
# `ShellNotifier` via the pinned-local /api/notify* routes — no JS API, so no
# capability entries here either.
tauri-plugin-notification = "2"
# `tauri::generate_context!` emits `::serde_json` once tauri.conf.json has a
# `plugins` section, so the macro needs it as a direct dependency.
serde_json = "1"
# System-browser opens for `target="_blank"` links (release page, GitHub device
# flow) — wry's default new-window handling silently drops them.
open = "5"
# One instance at a time: after an update the exiting process can still hold the
# tray (and port 8765); a second launch forwards its argv and exits instead of
# adding a second tray. Registered release-only (see run()) — dev shares the
# bundle id and must stay free to run beside the installed app.
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "s"
strip = true
