[package]
name = "vibestudio"
version = "0.0.0"
description = "View and edit Agent Skills"
authors = ["Altrina"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# The desktop/mobile split lives in the TARGET tables below, not in cargo
# features: `tauri ios dev/build` can pass `--features` but cannot disable
# default features, so a feature-based split would need flags on every desktop
# invocation instead. Target-gated deps make every entry point — `npm run dev`,
# `cargo check`, `tauri ios build` — resolve the right backend with no flags.

[dependencies]
tauri = { version = "2", features = [] }
skill-core = { path = "../../server/skill-core" }
# Logging facade for the shell's own diagnostics; the subscriber comes from
# `skill_server::init_logging()`, so no `env_logger` dependency is needed here.
log = "0.4"
# `tauri::generate_context!` emits `::serde_json` once tauri.conf.json has a
# `plugins` section, so the macro needs it as a direct dependency.
serde_json = "1"

# ── Desktop (macOS/Windows/Linux): the full local backend ──
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
# tray-icon: window-close hides to the tray (the tray governs the lifecycle);
# image-png decodes the bundled icon for the tray.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
skill-term = { path = "../../server/skill-term" }
# Backend (incl. the SSH connection manager) — the desktop wires it into its
# in-process server; the ssh/provisioning code lives here, not in the shell.
# Default features = the full local backend (terminals, mining).
skill-server = { path = "../../server/skill-server" }
# Self-update download/install (dmg-app, NSIS, deb/AppImage). Pure-Rust use,
# driven by `ShellUpdater` — no JS API, so no capability entries are needed.
tauri-plugin-updater = "2"
# OS toasts for agent turn-finish events. Pure-Rust use, driven by
# `ShellNotifier` via the pinned-local /api/notify* routes — no JS API, so no
# capability entries here either.
tauri-plugin-notification = "2"
# System-browser opens for `target="_blank"` links (release page, GitHub device
# flow) — wry's default new-window handling silently drops them.
open = "5"
# One instance at a time: after an update the exiting process can still hold the
# tray (and port 8765); a second launch forwards its argv and exits instead of
# adding a second tray. Registered release-only (see run()) — dev shares the
# bundle id and must stay free to run beside the installed app.
tauri-plugin-single-instance = "2"

# ── Mobile (iOS): a pure switchboard — every /api/* proxies to the connected
# remote over the in-process russh transport (iOS can't spawn `ssh`), so the
# local backend (terminals, mining, updater, tray) is dropped entirely. iOS only
# for now — Android isn't a target (no Keychain equivalent wired up), so it's
# deliberately excluded rather than half-supported. ──
[target.'cfg(target_os = "ios")'.dependencies]
skill-server = { path = "../../server/skill-server", default-features = false, features = ["russh-transport"] }
# Native local notifications for agent turn-finish events (the iOS app's own
# notification channel; the desktop table has its own copy). Driven by
# ShellNotifier via the pinned-local /api/notify* routes — no JS API.
tauri-plugin-notification = "2"

# Keychain access for the SecureStore (SSH private keys live in the iOS
# Keychain). Compiled on macOS too — same Security.framework path — so the
# store is unit-testable on a Mac.
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "s"
strip = true
