[package]
name = "skill-server"
version = "0.1.0"
edition = "2021"
description = "Headless HTTP server exposing skill-core over /api (WSL2 / remote backend)"

[[bin]]
name = "skill-server"
path = "src/main.rs"

[dependencies]
skill-core = { path = "../skill-core" }
skill-term = { path = "../skill-term" }
skill-remote = { path = "../skill-remote" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
urlencoding = "2"
dirs = "5"
