[package]
name = "skill-core"
version.workspace = true
edition = "2021"
description = "Transport-agnostic skill filesystem + discovery logic (no GUI deps)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
# Logging facade only (no subscriber — a binary installs one). Already in the
# lockfile transitively, so this is free and keeps skill-core a pure library.
log = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
dirs = "5"
base64 = "0.22"
# On-device commit-message generation: blocking HTTP (talk to a llama-server
# child + download the GGUF model) and integrity-checking the download.
ureq = "2"
sha2 = "0.10"
# MCP connections (connections.rs): flow-state/PKCE randomness + authorize-URL
# query encoding. Both already in the lockfile via skill-server.
getrandom = "0.2"
urlencoding = "2"
# opencode keeps its sessions in a WAL SQLite db (session_title.rs). `bundled`
# compiles SQLite in-tree so releases don't depend on a system libsqlite3.
rusqlite = { version = "0.40.1", features = ["bundled"] }
