[package]
name = "skill-server"
version.workspace = true
edition = "2021"
description = "The backend: HTTP face of skill-core + skill-term (/api + SSE), serving the built UI. Runs in-process in the desktop (loopback) or standalone on a remote host."

[lib]
name = "skill_server"
path = "src/lib.rs"

[[bin]]
name = "skill-server"
path = "src/main.rs"

[features]
# A full local backend (terminals + mining run locally via skill-term's native
# pty). Default-on for the desktop and the standalone remote binary. A mobile
# switchboard builds with `--no-default-features`: every /api/* is proxied to the
# connected remote, so the local terminal/mining handlers — and portable-pty's
# native deps (nix/libc/serial2) — are dropped entirely.
default = ["local-backend"]
local-backend = ["dep:skill-term"]
# Compile the built SPA (repo-root ./dist) into the binary, so a bare
# `skill-server` serves the UI with no dist on disk (the daemon / release
# artifact case). Off by default: dev builds shouldn't require `npm run build`.
embed-ui = ["dep:include_dir"]
# Pure-Rust SSH transport (russh) for the mobile switchboard, where iOS bans
# spawning the `ssh` binary. Desktop keeps the shell-out (it inherits the user's
# ssh config / agent / ProxyJump — a feature, not a dep to drop). The `ring`
# crypto backend (not the default C-based aws-lc-rs) keeps the aarch64-apple-ios
# cross-compile FFI-free: the same backend rustls already uses in this tree.
russh-transport = ["dep:russh", "dep:tokio"]

[dependencies]
skill-core = { path = "../skill-core" }
skill-term = { path = "../skill-term", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
urlencoding = "2"
# Reverse-proxy client for the Remote-SSH switchboard + downloading the remote
# `skill-server` asset (pure-Rust rustls + gzip).
ureq = "2"
# SSH connection manager (sshmgr): `~/.ssh/config` discovery (dirs), per-session
# bearer token (getrandom), and verifying the downloaded binary's checksum (sha2).
# All pure-Rust / already in the lockfile, so the static-musl build is unaffected.
dirs = "5"
getrandom = "0.2"
sha2 = "0.10"
# Web Push sender (push.rs): VAPID ES256 + RFC 8291 aes128gcm on ring, key/sub
# encoding on base64. Both were already in the lockfile (ring via rustls/ureq).
ring = "0.17"
base64 = "0.22"
# Logging: the `log` facade plus the `env_logger` subscriber installed by
# `init_logging()` (the desktop calls that too, so this is the ONLY crate carrying
# a subscriber). default-features=false drops regex + color to keep the static-musl
# remote binary lean; `humantime` re-enables readable timestamps. All pure-Rust.
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
# Phone access: QR code for the served URL (pure Rust, renders SVG).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
include_dir = { version = "0.7", optional = true }
# Mobile-only SSH transport (see the `russh-transport` feature). `ring` backend +
# rsa/flate2 for real-world host/key/compat coverage; all pure-Rust or ring (no
# openssl / aws-lc C). tokio is the async runtime russh needs — a small dedicated
# runtime the otherwise-sync switchboard blocks on.
russh = { version = "0.62", optional = true, default-features = false, features = ["ring", "flate2", "rsa"] }
tokio = { version = "1", optional = true, default-features = false, features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
